--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 BOT_TOKEN=1234567890:00000000000000000000000000000000000
+PROVIDER_TOKEN=1234567890:TEST:00000000000000000000
 MONGO_URI=mongodb://username:password@localhost:27017/
+
+PYTHONUNBUFFERED=1
