--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 aiogram==3.20.0.post0
 aiohttp==3.12.9
 colorlog==6.9.0
+cryptography==45.0.5
 pymongo==4.12.1
 pydantic==2.11.4
 pydantic-mongo==3.1.0
