--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BOT_TOKEN=1234567890:00000000000000000000000000000000000
 PROVIDER_TOKEN=1234567890:TEST:00000000000000000000
-MONGO_URI=mongodb://username:password@localhost:27017/
-
+MONGO_URI=mongodb://username:password@localhost:27017/?tls=true&tlsAllowInvalidCertificates=true
+MONGO_TLS_CA_PATH=./ssl/ca.pem
 PYTHONUNBUFFERED=1
