--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.10-slim
 
 WORKDIR /src/
 
+ENV LANG=C.UTF-8 \
+    LANGUAGE=ru:en \
+    LC_ALL=C.UTF-8
+
 COPY requirements.txt .
 
 RUN pip install --upgrade pip \
