--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,10 @@ services:
     container_name: tg_bot_container
     build: ./src
     restart: unless-stopped
-    network_mode: host
 
     command: python /src/run.py
     volumes:
       - ./src/:/src/
+      - ./ssl/:/ssl/
     env_file:
       - .env
