--- a/src/libs/nalog/pyproject.toml
+++ b/src/libs/nalog/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "moy-nalog-py"
+name = "moy-nalog-api"
 version = "0.1.0"
 description = "Python клиент для работы с API сервиса Мой налог"
 authors = [
@@ -11,7 +11,6 @@ authors = [
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.8"
