сборку образа перед перезапуском, мейби временно

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,5 @@ jobs:
             cd /opt/mapp
             git pull origin main
             docker compose down
+            docker compose build
             docker compose up -d --force-recreate --remove-orphans
