--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ BOT_TOKEN=1234567890:00000000000000000000000000000000000
 PROVIDER_TOKEN=1234567890:TEST:00000000000000000000
 MONGO_URI=mongodb://username:password@localhost:27017/?tls=true&tlsAllowInvalidCertificates=true
 MONGO_TLS_CA_PATH=./ssl/ca.pem
+
+TG_LOGS_CHANNEL_ID=1234567890
+TG_ADMIN_CHAT_ID=1234567890
+
 PYTHONUNBUFFERED=1
